--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Lsh58 Blog
 description: "Front-end Study"
-logo: l.png
+logo:
 disqus_shortname: lsh58
 disqus_url: tmdgus508@naver.com
 disqus_id: lsh58
