--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ bing_verify:
 
 links:
     - title: Home
-      url: / Home
+      url: /
       external: false
       icon: home
     - title: Featured Posts
